# identify

./: .gitignore  Dockerfile  Makefile  README.md  main.py
identify/: .dockerignore  Dockerfile  Pipfile  main.py  requirements.txt  setup.cfg  setup.py
identify/identify/: __init__.py  controller.py  tasks.py
identify/identify/medias/twitter/: api.py  service.py
identify/identify/utils/: pandas_utils.py  text_utils.py
identify/identify/utils/data_utils/datastore/: __init__.py
identify/identify/utils/data_utils/datastore/twitter/: __init__.py  replies.py
identify/identify/utils/data_utils/storage/: _seeking.py
k8s/deployments/: api-deployment.tmpl  api-deployment.yml  crawler-deployment.yml
k8s/hpas/: api-hpa.yml  crawler-hpa.yml
k8s/services/: api-service.yml
seeking/: Dockerfile  __init__.py  procfile  requirements.txt  tasks.py
seeking/medias/twitter/: api.py  utils.py
seeking/seeking/: controller.py  tasks.py
seeking/seeking/config/: config.py.copy
seeking/seeking/medias/twitter/: api.py  service.py
seeking/seeking/utils/: string_utils.py  text_utils.py
seeking/seeking/utils/data_utils/datastore/: __init__.py
seeking/seeking/utils/data_utils/datastore/twitter/: __init__.py  index.yaml  preprocessed_tweets.py  preprocessed_users.py  replies.py
seeking/seeking/utils/data_utils/storage/: _seeking.py
seeking/utils/: string_utils.py
