[metadata]
name = identify

[flake8]
exclude = .git, .tox, .venv, .eggs, build, dist, docs, __init__.py
max-line-length = 120

[isort]
skip = .git, .tox, .venv, .eggs, build, dist, docs
line_length = 120

[tool:pytest]
norecursedirs = .git .tox .venv* requirements*
testpaths = tests
addopts =
    --cov identify
    --cov-report term-missing
    --cov-config .coveragerc
    -n auto

[coverage:run]
branch = True
source =
    identify
    tests
